<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="vui_long_doi">Vui lòng đợi ... !</string>
    <string name="app_name">Sicco</string>
    <string name="thong_bao_rong"> Bạn phải nhập nội dung thảo luận!</string>
    <string name="trang_chu">Trang chủ</string>
    <string name="canh_bao">Cảnh báo</string>
    <string name="tat_ca">Tất cả</string>
    <string name="cong_van">Công văn</string>
    <string name="cong_viec">Công việc</string>
    <string name="lich_bieu">Lịch biểu</string>
    <string name="danh_ba">Danh bạ</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="xem_them">Xem thêm </string>
    <string name="dang_tai_thao_luan">Đang tải thảo luận</string>
    <string name="gui_thao_luan_thanh_cong">Gửi thảo luận thành công.</string>
    <string name="khong_gui_duoc_thao_luan">Không gửi được thảo luận!!!</string>
    <string name="cap_nhat_tien_do_thanh_cong">Cập nhật tiến độ công việc thành công</string>
    <string name="khong_cap_nhat_duoc_tien_do">Không cập nhật được tiến độ công việc!</string>
    <string name="sua_cong_viec_thanh_cong">Sửa công việc thành công!</string>
    <string name="sua_cong_viec_khong_thanh_cong">Sửa công việc không thành công!</string>
    <!-- menu -->
    <string name="action_add_congviec">Thêm công việc</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="action_tatca">Tất cả</string>
    <string name="action_update">Cập nhật</string>
    <string name="action_edit">Sửa</string>
    <string name="action_cancel">Hủy</string>
    <string name="action_save">Lưu</string>
	<!-- Login -->
	<string name="dang_nhap">Đăng nhập ></string>
	<string name="tai_khoan">Tài khoản</string>
	<string name="mat_khau">Mật khẩu</string>
	<string name="duy_tri_dang_nhap">Duy trì đăng nhập</string>
	<string name="progress_msg">Đang đăng nhập...</string>
	<!-- Công việc -->
	<string name="du_an">Dự án</string>
	<string name="nguoi_xem">Người xem</string>
	<string name="tep_dinh_kem">Tệp đính kèm</string>
	<string name="noi_dung">Nội dung</string>
	<string name="them_cong_viec">Thêm công việc</string>
	<string name="chi_tiet_cong_viec">Chi tiết công việc</string>
	<string name="sua_cong_viec">Sửa công việc</string>
	<string name="tat_ca_cong_viec">Tất cả công việc</string>
	<string name="toan_bo_cong_viec">Toàn bộ công việc</string>
	<string name="cong_viec_da_giao">Công việc đã giao</string>
	<string name="cong_viec_duoc_giao">Công việc được giao</string>
	<string name="cong_viec_theo_doi">Công việc theo dõi</string>
	<string name="cong_viec_hoan_thanh">Công việc hoàn thành</string>
	<string name="ten_cong_viec">Tên công việc</string>
	<string name="han_cuoi">Hạn cuối</string>
	<string name="nguoi_xu_ly">Người xử lý</string>
	<string name="nguoi_giao">Người giao</string>
	<string name="ngay_hoan_thanh">Ngày hoàn thành</string>
	<string name="tien_do">Tiến độ</string>
	<!-- Notify -->
	<string name="one_msg">Bạn có 1 %1$s</string>
	<string name="multi_msg">Bạn có %1$i cảnh báo mới</string>
	<string name="new_noti">Cảnh báo mới</string>
	<string name="new_noti_mess">Bạn có </string>
	<string name="congvan">Công văn</string>
	<string name="congviec">Công việc</string>
	<string name="lichbieu">Lịch biểu</string>
	<!-- Widget công việc -->
	<string name="them_cv">+</string>
	<string name="read_more">Xem thêm</string>
	<!-- Widget Configure -->
	<string name="choose_bg_color">Chọn màu nền và độ trong suốt!</string>
	<string name="choose_text_color">Chọn màu chữ!</string>
	
	<!-- Các tiêu chí Tìm kiếm -->
	<string-array name="cac_tieu_chi">
	    <item name="tieu_chi_tatca">Tất cả</item>
	    <item name="tieu_chi_tencongviec">Tên công việc</item>
	    <item name="tieu_chi_nguoigiao">Người giao</item>
	    <item name="tieu_chi_nguoiduocgiao">Người được giao</item>
	</string-array>
	
	<!-- Dialog màn hình thêm công việc -->
	<string name="chon_du_an">Chọn dự án</string>
	<string name="chon_nguoi_xu_ly">Chọn người xử lý</string>
	<string name="chon_nguoi_xem">Chọn người xem</string>
	<string name="chon_tep_dinh_kem">Chọn tệp đính kèm</string>
	
	<string name="truong_nay_khong_duoc_de_rong">Trường này không được để rỗng.</string>
</resources>

