<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#b0b0b0"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_cong_van"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cong_van"
            android:drawableLeft="@drawable/ic_launcher"
            style="@style/ItemMenuStyle"/>
        <TextView
            android:id="@+id/txt_cong_viec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cong_viec"
            android:drawableLeft="@drawable/ic_launcher"
            style="@style/ItemMenuStyle"/>
        <TextView
            android:id="@+id/txt_lich_bieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lich_bieu"
            android:drawableLeft="@drawable/ic_launcher"
            style="@style/ItemMenuStyle" />
        <TextView
            android:id="@+id/txt_danh_ba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/danh_ba"
            android:drawableLeft="@drawable/ic_launcher"
            style="@style/ItemMenuStyle" />
        <TextView
            android:id="@+id/txt_dang_xuat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dang_xuat"
            android:drawableLeft="@drawable/ic_launcher"
            android:background="#d9d9d9"
            style="@style/ItemMenuStyle" />
        
    </LinearLayout>

</ScrollView>