<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/ten_cong_viec"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_ten_cong_viec"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_selector"
                android:ems="10"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:singleLine="true"
                android:textColor="#3d3232" >
            </EditText>

            <include layout="@layout/sep" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:text="@string/noi_dung"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_noi_dung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_selector"
                android:ems="10"
                android:lineSpacingExtra="3dp"
                android:minHeight="40dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textColor="#3d3232" >
            </EditText>

            <include layout="@layout/sep" />

            <LinearLayout
                android:id="@+id/layout_ngay_hoan_thanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/ngay_hoan_thanh"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_ngay_hoan_thanh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chọn ngày"
                    android:textSize="14sp" />
            </LinearLayout>

            <include layout="@layout/sep" />

            <LinearLayout
                android:id="@+id/layout_du_an"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/du_an"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_du_an"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chọn dự án"
                    android:textSize="14sp" />
            </LinearLayout>

            <include layout="@layout/sep" />

            <LinearLayout
                android:id="@+id/layout_nguoi_xu_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/nguoi_xu_ly"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_nguoi_xu_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chọn người xử lý"
                    android:textSize="14sp" />
            </LinearLayout>

            <include layout="@layout/sep" />

            <LinearLayout
                android:id="@+id/layout_nguoi_xem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/nguoi_xem"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_nguoi_xem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chọn người xem"
                    android:textSize="14sp" />
            </LinearLayout>

            <include layout="@layout/sep" />

            <LinearLayout
                android:id="@+id/layout_tep_dinh_kem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:onClick="onClick"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/tep_dinh_kem"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_tep_dinh_kem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Chọn file"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>