<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_cv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SICCO"
            android:textColor="#0093dd"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>

        <ImageView
            android:id="@+id/imageConfigure"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_widget_configure"
            android:padding="10dp"
            android:layout_gravity="center_vertical|right" />
		
        <TextView
            android:id="@+id/textView2"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:text="@string/them_cv"
            android:textColor="#0093dd"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_vertical|center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="#0093dd" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_cong_viec"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/han_cuoi"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginRight="30dp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view is show if list items are empty -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Rong"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>
